<resources>
    <string name="app_name">PomodoroApp</string>
    <string name="timer_icon">Timer icon</string>
    <string name="start_pomodoro">Spustit pomodoro</string>
    <string name="minutes">25 minut</string>
    <string name="user">Uživatel</string>
    <string name="stop_pomodoro">Zastavit pomodoro</string>
    <string name="zapsat_ukol">Zapsat úkol</string>
    <string name="zbyva">Zbývá</string>
    <string name="neodkladn">Neodkladné</string>
    <string name="odkladn">Odkladné</string>
    <string name="add_task">Přidat úkol</string>
    <string name="bad_login">Špatné přihlašovací údaje</string>
    <string name="add_credentials">Vyplňte email a heslo.</string>
    <string name="OK">OK</string>
    <string name="bad_email_format">Špatný formát emailu.</string>
    <string name="login_error">Chyba přihlášení.</string>
    <string name="main_tasks">Hlavní úkoly</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="name_of_the_main_task">Název</string>
    <string name="task_description">Popis</string>
    <string name="date">Datum</string>
    <string name="confirm">Vytvořit</string>
    <string name="new_task">Nový úkol</string>
    <string name="e_mail">E-mail</string>
    <string name="pomodoroapp">PomodoroApp</string>
    <string name="password">Heslo</string>
    <string name="log_in">Přihlásit se</string>
    <string name="back">Zpět</string>
    <string name="neodkladne">Neodkladné</string>
    <string name="info_icon">info_icon</string>
    <string name="n_zev_kolu">Název úkolu</string>
    <string name="pridat_taks">Přidat task</string>
    <string name="n_zev_tasku">Název tasku</string>
    <string name="new_minor_task_name">Název nového tasku</string>
    <string name="new_account">Nový účet</string>
    <string name="delete_minor_task">Odstranit task</string>
    <string name="change_minor_task_name">Upravit název tasku</string>
    <string name="change_task">Upravit task</string>
    <string name="spustit_pomodoro">Spustit Pomodoro</string>
    <string name="zrusit_pomodoro">Zrusit Pomodoro</string>
    <string name="zvolit_hlavn_kol">Hlavní úkol</string>
    <string name="NotifID">Čas běží!</string>
    <string name="snooze">Nejaky snooze</string>
    <string name="change_description">Změnit popis úkolu</string>
    <string name="change_date">Změnit datum úkolu</string>
    <string name="pomodoros">Počet uplynulých pomodor</string>
    <string name="datum">Datum</string>
    <string name="popis_kolu">Popis úkolu</string>
    <string name="smazat_kol">Smazat úkol</string>
    <string name="upravit_kol">Upravit úkol</string>
    <string name="pokra_ovat">Pokračovat</string>
    <string name="zobrazit_na_map_posledn_pomodoro">Zobrazit na mapě poslední pomodoro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Umístění posledního pomodora</string>
    <string name="permission_denied_explanation">Nemáme přístup k poloze. Ukončené pomodora nebudou ukazovat polohu. :(</string>
    <string name="settings">Settings</string>
    <string name="permission_rationale">Přístup k poloze je potřeba k zaznamenání polohy úkolu.</string>
    <string name="preference_file_key">com.example.pomodoroapp.PREFERENCE_FILE_KEY</string>
</resources>