<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        tools:cardBackgroundColor="#FFFF"
        tools:cardCornerRadius="8dp"
        tools:contentPadding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/addTaskName"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/new_task"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@id/etName"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_the_main_task"
                app:layout_constraintBottom_toTopOf="@id/etDescription"
                app:layout_constraintTop_toBottomOf="@id/addTaskName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/task_description"
                app:layout_constraintBottom_toTopOf="@id/etDate"
                app:layout_constraintTop_toBottomOf="@id/etName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:layout_constraintBottom_toTopOf="@id/btnSubmit"
                app:layout_constraintTop_toBottomOf="@id/etDescription"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>